# promptStrike-ares-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
app/adapters/: __init__.py  base_adapter.py  chainforge_adapter.py  garak_adapter.py  promptfoo_adapter.py
app/middleware/: __init__.py  authentication.py  authorization.py
app/models/: __init__.py  domain.py  schemas.py
app/repositories/: __init__.py  assessment_repo.py  base.py  project_repo.py  target_repo.py  user_repo.py
app/routers/: __init__.py  assessments.py  auth.py  projects.py  reports.py  targets.py
app/services/: __init__.py  assessment_service.py  project_service.py  report_service.py  target_service.py  user_service.py
app/utils/: __init__.py  connectivity.py  csv_parser.py  html_analyzer.py  pdf_generator.py
docs/: architechture_overview.md
migrations/: alembic.ini  env.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
