[project]
name = "ares-api"
version = "0.1.0"
description = "PromptStrike backend — attack orchestration engine for LLM prompt injection testing."
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.110"
uvicorn = { version = ">=0.27", extras = ["standard"] }
sqlalchemy = { version = ">=2.0", extras = ["asyncio"] }
asyncpg = ">=0.29"
alembic = ">=1.13"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
bcrypt = ">=4.0"
python-multipart = ">=0.0.6"
weasyprint = ">=61"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
