[project]
name = "ares-api"
version = "0.1.0"
description = "PromptStrike backend — attack orchestration engine for LLM prompt injection testing."
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.110"
uvicorn = { version = ">=0.27", extras = ["standard"] }
sqlalchemy = { version = ">=2.0", extras = ["asyncio"] }
asyncpg = ">=0.29"
alembic = ">=1.13"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
bcrypt = ">=4.0"
python-multipart = ">=0.0.6"
weasyprint = ">=61"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pre-commit>=4.0",
    "ruff>=0.9",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

# ── Ruff ────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

# ── mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true
